# slop-mcp

./: .gitignore  .pre-commit-config.yaml  .slop-mcp.kdl.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PYPI_README.md  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: docs.yml  release.yml
cmd/memory-cli/: main.go  main_test.go
cmd/slop-mcp/: main.go  mcp.go  mcp_test.go  message.go  message_test.go  monitor.go  monitor_test.go  run.go  run_test.go  serve.go  serve_test.go
demo/: 01-message.tape  02-multi-source.tape  03-slop-monitor.tape  monitor-demo.slop  monitor.tape  persist-demo.slop
demo/examples/: build-watch.sh  deploy-watch.sh  file-watch.sh  test-watch.sh
demo/hooks/: post-commit  pre-push
docs/: .gitignore  cli-tools-spec.md  configuration.md  docusaurus.config.js  memory-cli-spec.md  package-lock.json  package.json  sidebars.js  slop-language.md
docs/docs/: intro.md
docs/docs/concepts/: context-efficiency.md  customization.md  monitoring.md  oauth.md  skills.md  why-slop-mcp.md
docs/docs/examples/: math-calculations.md  mcp-templates.md  (+1 more)
docs/internal/: description-style.md
examples/cli/: common-tools.kdl  memory-tools.kdl
internal/atomicfile/: atomicfile.go  atomicfile_test.go
internal/auth/: auth.go  auth_stub.go  auth_test.go  tokenstore.go  tokenstore_test.go
internal/builtins/: crypto.go  crypto_test.go  jwt.go  jwt_test.go  memory.go  memory_lock_test.go  memory_reserved_test.go  memory_test.go  reserved.go  reserved_test.go  runtime.go  session.go  session_test.go  slop_reference.go  slop_reference_test.go  template.go  template_math_dedent_test.go  template_test.go
internal/cache/: cache.go  cache_test.go
internal/cli/: cli_test.go  executor.go  expand_tilde_test.go  registry.go  slop_service.go  stdout_trim_test.go  types.go  utils.go
internal/config/: config.go  kdl.go  kdl_test.go  merge.go  merge_test.go
internal/filelock/: filelock.go  filelock_test.go  filelock_unix.go  filelock_windows.go
internal/logging/: logging.go  logging_test.go
internal/overrides/: flusher.go  flusher_test.go  hash.go  hash_test.go  overrides.go  overrides_test.go  pack.go  pack_test.go  scope.go  scope_test.go  store.go  store_test.go
internal/recipes/: recipes.go  recipes_test.go
internal/registry/: errors_classify_test.go  execute_raw_json_test.go  health_test.go  index.go  index_builder_test.go  index_test.go  lifecycle_test.go  reconnect_test.go  registry.go  registry_integration_test.go  timeout_test.go
internal/server/: .slop-mcp.kdl  agnt_watch.go  agnt_watch_test.go  cli_routing_test.go  custom_exec.go  custom_exec_test.go  customize_e2e_test.go  customize_handler.go  customize_handler_test.go  execute_tool_precision_test.go  execute_tool_wrongkey_test.go  handlers.go  handlers_test.go  http_auth_test.go  override_adapter.go  override_stale_test.go  run_slop_concurrency_test.go  schemas.go  server.go  server_integration_test.go  server_test.go  slop_runtime.go  slop_runtime_test.go  tools.go
npm/: README.md  bin.js  bin.test.js  index.js  install.js  package.json
scripts/: integration-test.sh  release.sh
src/slop_mcp/: __init__.py  __main__.py
tests/: test_python_package.py  test_release_workflow.py
(+25 files in other folders)
