[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slop-mcp"
version = "0.0.0"
description = "MCP server for orchestrating multiple MCP servers with progressive tool discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "StandardBeagle", email = "dev@standardbeagle.com" }
]
keywords = ["mcp", "model-context-protocol", "ai", "llm", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/standardbeagle/slop-mcp"
Repository = "https://github.com/standardbeagle/slop-mcp"
Issues = "https://github.com/standardbeagle/slop-mcp/issues"

[project.scripts]
slop-mcp = "slop_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slop_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
